# crypt-chat

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
include/: crypto.h  network.h  protocol.h  session.h
src/: CMakeLists.txt  crypto.c  main.c  network.c  protocol.c  session.c
